# ag-nexus-pm-agent

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  project-nexus-comprehensive-appendices-002.md  project-nexus-healthcare-ai-prp.md  pyproject.toml  zoho_oauth_helper.py  zoho_workflow.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
.zap/: rules.tsv
nexus_agent/: __init__.py  agent_loop.py  config.py  errors.py  metrics.py  zoho_client.py
nexus_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nexus_agent/services/: projects.py  workdrive.py
tests/: test_agent_loop.py  test_agent_loop_run.py  test_analyzer.py  test_config.py  test_email_template.py  test_metrics.py  test_mime_heuristics.py  test_projects.py  test_projects_service.py  test_rate_limit.py  test_retry.py  test_retry_predicate.py  test_workdrive.py  test_zoho_client.py
